--- a/src/main/resources/templates/fragments/pageMessages.html
+++ b/src/main/resources/templates/fragments/pageMessages.html
@@ -1,44 +1,44 @@
-<div th:fragment="error" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="error">
     <div th:if="${error}" class="alert alert-danger alert-dismissible fade show" role="alert">
         <div class="text" th:utext="${#strings.unescapeJava(#strings.replace(#strings.escapeJava(errorMessage),'\n','&lt;br /&gt;'))}"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-</div>
+</th:block>
 
-<div th:fragment="warning" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="warning">
     <div th:if="${warning}" class="alert alert-warning alert-dismissible fade show" role="alert">
         <div class="text" th:utext="${#strings.unescapeJava(#strings.replace(#strings.escapeJava(warningMessage),'\n','&lt;br /&gt;'))}"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-</div>
+</th:block>
 
-<div th:fragment="info" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="info">
     <div th:if="${info}" class="alert alert-info alert-dismissible fade show" role="alert">
         <div class="text" th:utext="${#strings.unescapeJava(#strings.replace(#strings.escapeJava(infoMessage),'\n','&lt;br /&gt;'))}"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-</div>
+</th:block>
 
-<div th:fragment="success" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="success">
     <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
         <div class="text" th:utext="${#strings.unescapeJava(#strings.replace(#strings.escapeJava(successMessage),'\n','&lt;br /&gt;'))}"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-</div>
+</th:block>
 
-<div th:fragment="client-val-popup" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="client-val-popup">
     <div id="client-val-popup" class="alert alert-danger alert-dismissible fade show" role="alert" style="display: none;">
         <div class="text">Some errors were found in the data submitted. Please check again.</div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-</div>
+</th:block>
